0.3.3 explore-with-me: 1. add analyzer service (need testing). 2. remove stats-server and stats-dto modules. 3. refactoring of core modules: set views on rating 4. add new methods to core services